--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -39,7 +39,7 @@
         
         button {
             margin-bottom: 10px;
-            background-color: teal;
+            background-color: rgb(124, 203, 203);
             border: solid;
             color: white;
             padding: 10px 10px;
@@ -52,7 +52,7 @@
         
         input[type="submit"] {
             margin-bottom: 10px;
-            background-color: plum;
+            background-color: rgb(240, 223, 240);
             border: solid;
             color: white;
             padding: 10px 10px;
